src/test/compile-fail/main-wrong-type.rs
// error-pattern:wrong type in main function: found 'fn(&&{x: int,y: int})'
fn main(foo: {x: int, y: int}) { }
